updated to help with first time OAuth